syntax = "proto3";

package sum;

service CalculatorService {
  rpc Sum (SumRequest) returns (SumResponse) {};
}

message SumRequest {
  int32 x = 1;
  int32 y = 2;
}

message SumResponse {
  int32 result = 1;
}