syntax = "proto3";

package greet;

service GreetService {
  // Unary RPC
  rpc Greet (GreetRequest) returns (GreetResponse) {};
  // Server streaming RPC
  rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse) {};
  // Client streaming RPC
  rpc LongGreet (stream GreetRequest) returns (GreetResponse) {};
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}